syntax = "proto3";

option go_package = "github.com/urodstvo/moderation-service/libs/grpc/webhook";
package webhook;

import "google/protobuf/empty.proto";


service WebhookService {
  rpc UpdateWebhook(UpdateWebhookRequest) returns (google.protobuf.Empty);
  rpc SendByWebhook(SendByWebhookRequest) returns (google.protobuf.Empty);
}

message UpdateWebhookRequest {
  int32 userId = 1;
  string webhookUrl = 2;
}

message SendByWebhookRequest {
  int32 userId = 1;
  string message = 2;
}